--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
-.body{
-  background-color:#2c3e50
+body{
+  background-color:#2c3e50;
   color:#ecf0f1
 }
+
+.container{
+  width: 100%;
+  overflow: auto;
+}
+
+
